--- a/.github/workflows/nvchecker.yml
+++ b/.github/workflows/nvchecker.yml
@@ -23,8 +23,8 @@ jobs:
         nvcmp -c xxoo.toml > cmp
         if [ -s cmp ]
         then
-          git config --global user.name 'nyfair'
-          git config --global user.email 'nyfair2012@gmail.com'
+          git config --global user.name 'datong5624'
+          git config --global user.email 'datong5624@gmail.com'
           mv new.json old.json
           git add old.json
           if grep -q nginx cmp
