--- a/win64/openssl/makefile.msvc
+++ b/win64/openssl/makefile.msvc
@@ -1,4 +1,3 @@
-
 # Copyright (C) Igor Sysoev
 # Copyright (C) Nginx, Inc.
 
@@ -6,16 +5,16 @@
 all:
 	cd $(OPENSSL)
 
-	perl Configure VC-WIN64A no-shared				\
-		--prefix="%cd%/openssl" 				\
-		--openssldir="%cd%/openssl/ssl" 			\
+	perl Configure VC-WIN64A no-shared no-legacy no-tests \
+		--prefix="%cd%/openssl" \
+		--openssldir="%cd%/openssl/ssl" \
 		$(OPENSSL_OPT)
 
-	if exist ms\do_win64a.bat (						\
-		ms\do_win64a						\
-		&& $(MAKE) -f ms\nt.mak					\
-		&& $(MAKE) -f ms\nt.mak install				\
-	) else (							\
-		$(MAKE)							\
-		&& $(MAKE) install_sw					\
+	if exist ms\do_win64a.bat ( \
+		ms\do_win64a \
+		&& $(MAKE) -f ms\nt.mak \
+		&& $(MAKE) -f ms\nt.mak install \
+	) else ( \
+		$(MAKE) \
+		&& $(MAKE) install_sw \
 	)
