--- a/.github/workflows/nvchecker.yml
+++ b/.github/workflows/nvchecker.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        token: ${{ secrets.WORKFLOW_TOKEN }}
+        github_token: ${{ secrets.WORKFLOW_TOKEN }}
     - name: Check Latest Version
       run: |
         sudo apt install python3-pycurl python3-tornado
