--- a/.github/workflows/nvchecker.yml
+++ b/.github/workflows/nvchecker.yml
@@ -17,8 +17,7 @@ jobs:
         token: ${{ secrets.AUTO }}
     - name: Check Latest Version
       run: |
-        sudo apt install python3-pycurl python3-tornado
-        pip install nvchecker in_place
+        pip install pycurl tornado nvchecker in_place
         nvchecker -c xxoo.toml
         nvcmp -c xxoo.toml > cmp
         if [ -s cmp ]
