--- a/.github/workflows/nvchecker.yml
+++ b/.github/workflows/nvchecker.yml
@@ -17,7 +17,7 @@ jobs:
         token: ${{ secrets.AUTO }}
     - name: Check Latest Version
       run: |
-        pip install pycurl tornado nvchecker in_place
+        pip3 install pycurl tornado nvchecker in_place
         nvchecker -c xxoo.toml
         nvcmp -c xxoo.toml > cmp
         if [ -s cmp ]
