--- a/xxoo.toml
+++ b/xxoo.toml
@@ -68,9 +68,9 @@ url = 'https://github.com/mpv-player/mpv/tags'
 regex = 'releases/tag/v([\d\.]+)">'
 
 [dav1d]
-source = 'archpkg'
-archpkg = 'dav1d'
-strip_release = true
+source = 'regex'
+url = 'https://github.com/videolan/dav1d/tags'
+regex = 'releases/tag/([\d\.]+)">'
 
 [ffnvcodec]
 source = 'regex'
