--- a/xxoo.toml
+++ b/xxoo.toml
@@ -29,7 +29,7 @@ to_pattern = '_'
 [luajit2]
 source = 'regex'
 url = 'https://github.com/openresty/luajit2/tags'
-regex = 'v([\w\.-]+)'
+regex = 'v([\d\.-]+)'
 
 [GCC]
 source = 'regex'
