--- a/xxoo.toml
+++ b/xxoo.toml
@@ -29,7 +29,7 @@ to_pattern = '_'
 [luajit2]
 source = 'regex'
 url = 'https://github.com/openresty/luajit2'
-regex ='v([\d\.]+_[\d]+)'
+regex = 'v([\d\.]-[\d]+)'
 from_pattern = '-'
 to_pattern = '_'
 
