--- a/xxoo.toml
+++ b/xxoo.toml
@@ -207,7 +207,7 @@ source = 'regex'
 url = 'https://github.com/mozilla/mozjpeg/tags'
 regex = 'releases/tag/v([\d\.]+)">'
 
-[libjpeg-xl]
+[libjxl]
 source = 'regex'
 url = 'https://github.com/libjxl/libjxl/tags'
 regex = 'releases/tag/v([\d\.]+)">'
