--- a/xxoo.toml
+++ b/xxoo.toml
@@ -214,6 +214,11 @@ source = 'regex'
 url = 'https://github.com/libjxl/libjxl/tags'
 regex = 'releases/tag/v([\d\.]+)">'
 
+[libwebp]
+source = 'regex'
+url = 'https://chromium.googlesource.com/webm/libwebp'
+regex = 'v([\d\.]+)'
+
 # leech
 [aria2]
 source = 'github'
