--- a/xxoo.toml
+++ b/xxoo.toml
@@ -106,7 +106,7 @@ regex = 'releases/tag/([\d\.]+)">'
 [libmodplug]
 source = 'regex'
 url = 'https://github.com/Konstanty/libmodplug'
-regex = 'libmodplug v([\d\.]+)'
+regex = 'libmodplug v([\d\.]+!$)'
 
 [libmysofa]
 source = 'regex'
@@ -142,11 +142,6 @@ regex = 'v([\d\.]+)">'
 source = 'regex'
 url = 'https://gitlab.gnome.org/GNOME/libxml2/-/tags'
 regex = 'v([\d\.]+)">'
-
-[libxvid]
-source = 'regex'
-url = 'https://downloads.xvid.com/downloads/'
-regex = 'xvidcore-([\d\.]+)\.tar\.bz2'
 
 [openal-soft]
 source = 'regex'
