--- a/xxoo.toml
+++ b/xxoo.toml
@@ -213,7 +213,7 @@ strip_release = true
 [libxvid]
 source = 'regex'
 url = 'https://downloads.xvid.com/downloads/'
-regex = 'xvidcore-([\d\.]+)\.tar.bz2
+regex = 'xvidcore-([\d\.]+)\.tar.bz2'
 
 [libzimg]
 source = 'regex'
