--- a/xxoo.toml
+++ b/xxoo.toml
@@ -22,11 +22,11 @@ regex = 'v([\d\.]+-[\d]+)'
 from_pattern = '-'
 to_pattern = '_'
 
-[Mingw-w64]
+[Mingw-w64-manual]
 source = 'manual'
 manual = '20220707_12.1.1_x64-ucrt_d847d702d627c147cbe2329d50cf5ed5bccc06ab'
 
-[Mingw-w64-real]
+[Mingw-w64]
 source = 'regex'
 url = 'https://gcc-mcf.lhmouse.com/'
 regex = 'mingw-w64-gcc-mcf_([\d]+_[\d\.]+_x64-ucrt_\w+)\.7z'
