--- a/xxoo.toml
+++ b/xxoo.toml
@@ -22,11 +22,11 @@ regex = 'v([\d\.]+-[\d]+)'
 from_pattern = '-'
 to_pattern = '_'
 
-[Mingw-w64-manual]
-source = 'manual'
-manual = '20220707_12.1.1_x64-ucrt_d847d702d627c147cbe2329d50cf5ed5bccc06ab'
-
 [Mingw-w64]
+source = 'manual'
+manual = '20220823_12.2.1_x64-ucrt_312c5733e6688dee58cdeb0eded8a16cfd956e7f'
+
+[Mingw-w64-real]
 source = 'regex'
 url = 'https://gcc-mcf.lhmouse.com/'
 regex = 'mingw-w64-gcc-mcf_([\d]+_[\d\.]+_x64-ucrt_\w+)\.7z'
