--- a/xxoo.toml
+++ b/xxoo.toml
@@ -313,7 +313,7 @@ to_pattern = '.'
 [vulkan]
 source = 'regex'
 url = 'https://github.com/KhronosGroup/Vulkan-Loader/tags'
-regex = 'releases/tag/v([\d\.]+)">'
+regex = 'releases/tag/sdk-([\d\.]+)">'
 
 [zlib]
 source = 'regex'
