--- a/.github/workflows/nvchecker.yml
+++ b/.github/workflows/nvchecker.yml
@@ -10,9 +10,9 @@ on:
 
 jobs:
   version_check:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@main
       with:
         token: ${{ secrets.AUTO }}
     - name: Check Latest Version
