--- a/.github/workflows/nvchecker.yml
+++ b/.github/workflows/nvchecker.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Check Latest Version
       run: |
         # sudo apt install python3-pycurl python3-tornado
-        pip3 install in-place appdirs structlog tomli tornado nvchecker
+        pip3 install in-place appdirs structlog tomli pycurl tornado nvchecker
         nvchecker -c xxoo.toml
         nvcmp -c xxoo.toml > cmp
         if [ -s cmp ]
