--- a/xxoo.toml
+++ b/xxoo.toml
@@ -196,7 +196,7 @@ strip_release = true
 
 [libplacebo]
 source = 'regex'
-url = 'https://github.com/haasn/libplacebo/tags"
+url = 'https://github.com/haasn/libplacebo/tags'
 regex = 'releases/tag/v([\d\.]+)"'
 
 [libpng]
