--- a/xxoo.toml
+++ b/xxoo.toml
@@ -3,6 +3,11 @@ oldver = 'old.json'
 newver = 'new.json'
 max_concurrency = 4
 
+[libplacebo_test]
+source = 'git'
+git = 'haasn/libplacebo'
+use_commit = true
+
 [GCC]
 source = 'regex'
 url = 'https://gcc.gnu.org'
