--- a/xxoo.toml
+++ b/xxoo.toml
@@ -5,7 +5,7 @@ max_concurrency = 4
 
 [libplacebo_test]
 source = 'git'
-git = 'haasn/libplacebo'
+git = 'https://github.com/haasn/libplacebo'
 use_commit = true
 
 [GCC]
