--- a/xxoo.toml
+++ b/xxoo.toml
@@ -8,6 +8,11 @@ source = 'git'
 git = 'https://github.com/haasn/libplacebo'
 use_commit = true
 
+[vim]
+source = "regex"
+regex = "7\\.3\\.\\d+"
+url = "http://ftp.vim.org/pub/vim/patches/7.3/"
+
 [GCC]
 source = 'regex'
 url = 'https://gcc.gnu.org'
