--- a/xxoo.toml
+++ b/xxoo.toml
@@ -28,7 +28,7 @@ to_pattern = '_'
 [luajit2]
 source = 'regex'
 url = 'https://github.com/openresty/luajit2/tags'
-regex = 'v([\d\.]+-[\d]+)'
+regex = 'v([\d\.]-[\d]+)'
 from_pattern = '-'
 to_pattern = '_'
 
